cilium-networkpolicies/longhorn-networkpolicies/longhorn-upgrade-check.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-upgrade-check
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toFQDNs:
        - matchName: gcr.io
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: longhorn-upgrade-responder.rancher.io
      toPorts:
        - ports:
            - port: "443"
