cilium-networkpolicies/longhorn-networkpolicies/netpol-longhorn-to-host.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-longhorn-to-host
  namespace: longhorn-system
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - csi-snapshotter
          - csi-provisioner
          - csi-attacher
          - csi-resizer
          - longhorn-manager
          - longhorn-driver-deployer
  egress:
    - toEndpoints:
        - matchLabels: {}
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
