cilium-networkpolicies/longhorn-networkpolicies/netpol-metrics-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-metrics-ingress
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring-system
            app.kubernetes.io/name: prometheus
            prometheus: prometheus-kube-prometheus-prometheus
      toPorts:
        - ports:
            - port: "9500"
